...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Settings-->
        <scene sceneID="dlR-3F-Q3M">
            <objects>
                <tableViewController title="Settings" modalPresentationStyle="formSheet" id="5KC-W6-t9Q" customClass="SettingsViewController" customModule="IVPNClient" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="vDW-Ar-ozm">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="groupTableViewBackgroundColor"/>
                        <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <view key="tableFooterView" contentMode="scaleToFill" id="zK0-8u-72W">
...
                                        <rect key="frame" x="0.0" y="599.5" width="414" height="80"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ga8-ba-ASK" id="svz-0C-ckf">
                                            <rect key="frame" x="0.0" y="0.0" width="383.5" height="80"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Network Protection" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6FN-J0-96u">
                                                    <rect key="frame" x="16" y="10" width="359.5" height="20"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="20" id="9nd-ZW-6Dx"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <color key="textColor" name="ivpnLabelPrimary"/>
...
                        <connections>
                            <outlet property="dataSource" destination="SVb-yR-JjU" id="AuB-Pz-lmK"/>
                            <outlet property="delegate" destination="SVb-yR-JjU" id="6Re-LG-c0d"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Add Custom Port" largeTitleDisplayMode="never" id="z1y-Ye-m24">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="kUg-Ry-AET">
                            <connections>
                                <action selector="dismissViewController:" destination="SVb-yR-JjU" id="e24-MD-Y6r"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Add" style="done" id="x2A-34-IAy">
                            <connections>
...
                            <outlet property="qrCodeImage" destination="LDZ-oO-5ye" id="a4A-eq-b9i"/>
                            <outlet property="statusLabel" destination="hky-B3-yLX" id="42L-ka-GMJ"/>
                            <outlet property="subscriptionDescLabel" destination="7kl-1m-D5X" id="6da-uT-U6W"/>
                            <outlet property="subscriptionLabel" destination="TUv-Dn-k2p" id="ZXq-I1-38z"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Account" id="H32-NI-wH6"/>
                    <connections>
                        <outlet property="accountView" destination="Aws-at-2vt" id="GDj-ca-izv"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Ki9-Pc-OJB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
