...
                return ""
            }
        }
        
        func buttonText() -> String {
            if !model.isLoggedIn {
                return "Log In"
            }
            
            if model.vpnStatus == .connected {
                return "Disconnect"
            }
            
...
