...
                                                <rect key="frame" x="49.666666666666657" y="204" width="276" height="40"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="I2y-xc-Far"/>
                                                    <constraint firstAttribute="width" constant="276" id="hk0-tJ-He7"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <state key="normal" title="Decline">
                                                    <color key="titleColor" name="ivpnBlue"/>
                                                </state>
                                                <connections>
                                                    <action selector="decline:" destination="gfz-SF-neZ" eventType="touchUpInside" id="fLL-5n-WyR"/>
                                                </connections>
                                            </button>
...
                            <constraint firstItem="JhE-Lv-grs" firstAttribute="leading" secondItem="6kh-ei-2sP" secondAttribute="leading" id="UGe-7d-5Mh"/>
                            <constraint firstItem="JhE-Lv-grs" firstAttribute="top" secondItem="rBu-xX-nCO" secondAttribute="bottom" id="Xv3-f9-i7B"/>
                            <constraint firstAttribute="trailing" secondItem="JhE-Lv-grs" secondAttribute="trailing" id="qS6-MI-oHs"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Usage Notice" id="OmD-nV-rxs">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="3Tx-E2-Cl7">
                            <connections>
                                <action selector="cancel:" destination="gfz-SF-neZ" id="8GC-9X-HiI"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Agree" id="Pst-mN-Brr">
                            <connections>
...
