...
                                                <color key="backgroundColor" name="ivpnBlue"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="276" id="Ugg-t0-Eie"/>
                                                    <constraint firstAttribute="height" constant="50" id="ice-WA-180"/>
                                                </constraints>
                                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="Log In">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="8"/>
                                                    </userDefinedRuntimeAttribute>
...
                                                <color key="backgroundColor" name="ivpnGray14"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="276" id="Vrb-wX-nuj"/>
                                                    <constraint firstAttribute="height" constant="50" id="kvo-t4-cN4"/>
                                                </constraints>
                                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="Create Account">
                                                    <color key="titleColor" name="ivpnLabelSecondary"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="8"/>
                                                    </userDefinedRuntimeAttribute>
...
